<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_gradient_background"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="#FFF"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/controlServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="20dp">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/ip"
                        style="@android:style/TextAppearance.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stopServer"
                        android:textStyle="italic"
                        android:typeface="serif" />
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingTop="10dp">

                    <TextView
                        style="@android:style/TextAppearance.Large"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/server"
                        android:textStyle="italic"
                        android:typeface="serif" />

                    <ToggleButton
                        android:id="@+id/toggleActivateServer"
                        style="@style/Toggle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:onClick="startWebServer" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/optionsRelativeL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="7"
            android:background="#FFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleOptions"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/options"
                    android:textStyle="italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/DirInfo"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Info"
                    android:textStyle="italic"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="50dp"
                    android:typeface="serif" />
            </LinearLayout>

            <Button
                android:id="@+id/selectDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/selectInfo"
                android:textSize="40sp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/green_button_background"
                android:onClick="selectIndex"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/green_gray_footer_gradient_background">

            <TextView
                android:id="@+id/urlInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/white" />
        </RelativeLayout>
    </TableLayout>

</RelativeLayout>